2002-09-19  Joseph Valenzuela  <jvalenzu@formosa>

	* src/arch/alsa/alsa.c
	Added Dirk's alsa changes

	* CREDITS
	Added Dirk Ehlke's name

2002-09-17  Joseph Valenzuela  <jvalenzu@formosa>

	* src/al_filter.c
	Fixed stupidity where source's gain wasn't being applied
	to non distance attentuated sources.  

2002-09-16  Christopher Purnell  <cjp@lost.org.uk>

	* src/al_filter.c
	* src/al_filter.h
	* src/al_types.h
	Added a panning filter.  This calculates the directional speaker gains
	in a way that is independant of distance.

        * src/alc/alc_speaker.c
        * src/alc/alc_speaker.h
	Speaker distace now has a value of 1 to simplify the math.

2002-09-09  Ryan C. Gordon  <ryan@epicgames.com>

	* src/alc/alc_context.c:
	Moved call to _alcSpeakerInit() to prevent segfault from referencing
	the context's write_device before it was initialized.

2002-09-08  Ryan C. Gordon  <ryan@epicgames.com>

	* src/arch/sdl/sdl.c:
	Changed sdl_blitbuffer() to call SDL_Delay(1) instead of SDL_Delay(0)
	while waiting for space in the ring buffer to become available.
	SDL_Delay(0) is almost universally a no-op, so this was eating the CPU.

2002-09-08  Christopher Purnell  <cjp@lost.org.uk>

	* src/alc/alc_speaker.c
	Changed _alcSpeakerMove() so that it creates a matrix itself from
	the listener orientation and applies that to the speaker positions
	instead of using _alRotatePointAboutAxis().  Also adjusted the
	speaker positions for fourpoint.

	* src/al_vector.c
	* src/al_vector.h
	Added a vector product function.
	
2002-09-07  Joseph Valenzuela  <jvalenzu@formosa>

	* src/al_filter.c:
	Messed with pitch again.  Both removed and reintroduced lookup
	table, but I think the result is more sound now.  Got a chance to
	clean it up, may revisit soon to reduce memory fragmentation in
	the tpitch lookup table.

2002-09-05  Ryan C. Gordon  <ryan@epicgames.com>

	* src/arch/sdl/sdl.c:
	Patched to function, again.

2002-09-05  Joseph Valenzuela  <jvalenzu@formosa>
